--- a/index.html
+++ b/index.html
@@ -15,7 +15,32 @@
         <li><a href="cadastro.html">cadastro</a></li>
     </ul>
 </nav>
-
 </header>
-<body>
+<main>
+<section>
+    <h2>Quem Somos</h2>
+    <p>Somos uma organizaçao sem fins lucrativos que atua com animais abandonados.</p>
+        <img src="imagens/cachorro.jpg" alt="voluntários em ação"> 
+        <section>
+
+        </section>
+        <h2>misão da ONG Amigão</h2>
+        <p>Promover dignidade e oportunaidade de acolhimento aos animais abandonados</p>
+    </section>
+         
+</section>
+<h2>Contato com ONG Amigão</h2>
+<address>
+    <p>Endereço: Rua Albino lopes, 111 - Ferraz Vaconcelos - São Paulo/SP</p>
+    <p>Telefone: (11)94914-6144</p>
+    </p>Email: contato@organizaçãoong</p>
+    </address>
+    
+</section>
+</main>
+
+<footer>
+    <p>&copy; 2025 ONG Amigão</p>
+</footer>
+</body>
 </html>
